[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
newick = "0.11.0"
pest = "2.7.4"
pest_derive = "2.7.4"
time = "0.3.29"
petgraph = "0.6.4"
regex = "1.10.2"
rand = "0.8.5"